<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title">Title Movie</string>
    <string name="date">date</string>
    <string name="description">description</string>
    <string name="overview">Overview</string>
    <string name="art">Artist</string>
    <string name="descontent">Image</string>
    <string-array name="title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Bird Box</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the "Spider's" Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>

    <integer-array name="score">
        <item>75</item>
        <item>68</item>
        <item>83</item>
        <item>70</item>
        <item>81</item>
        <item>65</item>
        <item>67</item>
        <item>70</item>
        <item>77</item>
        <item>74</item>
        <item>65</item>
        <item>63</item>
        <item>66</item>
        <item>60</item>
        <item>66</item>
        <item>58</item>
        <item>84</item>
        <item>60</item>
        <item>65</item>
        <item>66</item>
    </integer-array>

    <array name="image">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </array>
    <string-array name="desc">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even…</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people…</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy…</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock "'n'" roll band Queen in 1970. Hit songs become instant classics.…</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred…</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his "\family's" past, Adonis Creed is up against the challenge of his life…</item>
        <item>A kidnapped Fred Savage is forced to endure DeadPools PG-13 rendition of Deadpool 2 as a Princess Bride-esque story "that's" full of magic, wonder &amp; zero "\F's".</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, "Toothless’" discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and "Hiccup’s" reign as village chief is tested…</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku…</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence…</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup "d'état" is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war…</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with "Michael's" three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with…</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom…</item>
        <item>We "don't" have an overview translated in English. Help us expand our database by adding one.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown…</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension…</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, "he’s" just signed on as a drug…</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect…</item>
    </string-array>
    <string-array name="date">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 24, 2019</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>November 27, 2018</item>
        <item>January 17, 2019</item>
        <item>November 20, 2018</item>
        <item>December 6, 2018</item>
        <item>October 25, 2018</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
    </string-array>
    <string-array name="revenue">
        <item>$433,888,866.00</item>
        <item>$1,143,689,193.00</item>
        <item>-</item>
        <item>$2,046,239,637.00</item>
        <item>$835,137,710.00</item>
        <item>$465,895,025.00</item>
        <item>$137,944,327.00</item>
        <item>-</item>
        <item>$517,526,875.00</item>
        <item>$1,000,000.00</item>
        <item>$246,941,965.00</item>
        <item>-</item>
        <item>$348,807,090.00</item>
        <item>$104,236,467.00</item>
        <item>-</item>
        <item>$73,260,114.00</item>
        <item>$375,450,417.00</item>
        <item>$17,894,345.00</item>
        <item>$171,304,407.00</item>
        <item>$855,013,954.00</item>
    </string-array>
    <string-array name="budget">
        <item>$36,000,000.00</item>
        <item>$160,000,000.00</item>
        <item>$19,800,000.00</item>
        <item>$300,000,000.00</item>
        <item>$52,000,000.00</item>
        <item>$135,000,000.00</item>
        <item>$50,000,000.00</item>
        <item>-</item>
        <item>$129,000,000.00</item>
        <item>$1,000,000.00</item>
        <item>$20,000,000.00</item>
        <item>-</item>
        <item>$130,000,000.00</item>
        <item>$100,000,000.00</item>
        <item>-</item>
        <item>$100,000,000.00</item>
        <item>$90,000,000.00</item>
        <item>$43,000,000.00</item>
        <item>$50,000,000.00</item>
        <item>$116,000,000.00</item>

    </string-array>
    <string-array name="minutes">
        <item>2h 15m</item>
        <item>2h 24m</item>
        <item>2h 4m</item>
        <item>2h 29m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 11m</item>
        <item>2h 9m</item>
        <item>1h 34m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="arts">
        <item>Lady Gaga,Bradley Cooper,Sam Elliott,Andrew Dice Clay,Rafi Gavron</item>
        <item>Jason Momoa,Amber Heard,Willem Dafoe,Patrick Wilson,Nicole Kidman</item>
        <item>Sandra Bullock,Trevante Rhodes,John Malkovich,Sarah Paulson,Jacki Weaver</item>
        <item>Robert Downey Jr.,Chris Hemsworth,Chris Evans,Mark Ruffalo,Scarlett Johansson</item>
        <item>Rami Malek,Gwilym Lee,Ben Hardy,Joseph Mazzello,Lucy Boynton</item>
        <item>Hailee Steinfeld,Jorge Lendeborg Jr.,John Cena,Jason Ian Drucker,Pamela Adlon</item>
        <item>Michael B. Jordan,Sylvester Stallone,Dolph Lundgren,Florian Munteanu,Tessa Thompson</item>
        <item>Ryan Reynolds,Fred Savage,Josh Brolin,Morena Baccarin,Julian Dennison</item>
        <item>Jay Baruchel,America Ferrera,F. Murray Abraham,Cate Blanchett,Gerard Butler</item>
        <item>Masako Nozawa,Ryou Horikawa,Bin Shimada,Ryusei Nakao,Banjou Ginga</item>
        <item>James McAvoy,Bruce Willis,Samuel L. Jackson,Anya Taylor-Joy,Sarah Paulson</item>
        <item>Gerard Butler,Gary Oldman,Toby Stephens,Common,Linda Cardellini</item>
        <item>Emily Blunt,Lin-Manuel Miranda,Ben Whishaw,Emily Mortimer,Pixie Davies</item>
        <item>Hera Hilmar,Robert Sheehan,Hugo Weaving,Jihae,Ronan Raftery</item>
        <item>Epy Kusnandar,Tya Arifin,Soraya Rasyid,Andra Manihot,Sandi Tile</item>
        <item>Taron Egerton,Jamie Foxx,Ben Mendelsohn,Eve Hewson,Jamie Dornan</item>
        <item>Shameik Moore,Jake Johnson,Hailee Steinfeld,Mahershala Ali,Brian Tyree Henry</item>
        <item>Claire Foy,Sverrir Gudnason,Lakeith Stanfield,Sylvia Hoeks,Stephen Merchant</item>
        <item>Clint Eastwood,Bradley Cooper,Laurence Fishburne,Michael Peña,Dianne Wiest</item>
        <item>Tom Hardy,Michelle Williams,Riz Ahmed,Scott Haze,Reid Scott</item>
    </string-array>

</resources>
