<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:scaleType="fitXY"
        android:src="@drawable/poster_a_star" />

    <TextView
        android:textColor="@color/txtTitle"
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/horizontal_size"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie"
        android:text="@string/title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <TextView
        android:textColor="@color/text"
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_marginStart="@dimen/horizontal_size"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie"
        android:text="@string/date"
        android:textSize="@dimen/text_size" />

    <TextView
        android:textColor="@color/text"
        android:id="@+id/txt_desc"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_date"
        android:layout_marginStart="@dimen/horizontal_size"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:gravity="center_vertical"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie"
        android:text="@string/description" />
</RelativeLayout>