<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovie">

    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/horizontal_size"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:scaleType="fitXY"
        android:src="@drawable/poster_venom" />


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie"
        android:text="@string/title"
        android:textColor="@color/txtTitle"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie"
        android:text="@string/date"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size" />


    <LinearLayout
        android:id="@+id/containerstar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="@dimen/horizontal_size"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/txtruntime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerstar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie" />

    <TextView
        android:id="@+id/txtbudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtruntime"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie" />

    <TextView
        android:id="@+id/txtrevenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtbudget"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:layout_toEndOf="@+id/img_movie"
        android:layout_toRightOf="@+id/img_movie" />

    <TextView
        android:id="@+id/title_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_movie"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:text="@string/art"
        android:textAllCaps="false"
        android:textSize="@dimen/title_size" />

    <TextView
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:id="@+id/txt_art"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_cast" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_below="@+id/txt_art"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:background="@color/colorPrimary" />


    <TextView
        android:id="@+id/title_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size"
        android:text="@string/overview"
        android:textAllCaps="false"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_overview"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="@dimen/horizontal_size"
        android:layout_marginLeft="@dimen/horizontal_size"
        android:layout_marginTop="@dimen/vertical_size"
        android:layout_marginRight="@dimen/horizontal_size" />


</RelativeLayout>